--- a/views/home.html
+++ b/views/home.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="contenedorHeader">
-        <img src="/img/logo-mercado-liebre.svg" alt="Logo de mercado Liebre" class="logoML">
+        <a href="/"><img src="/img/logo-mercado-liebre.svg" alt="Logo de mercado Liebre" class="logoML"></a>
         <div class="buscador">
         <input type="text" placeholder="Buscar productos,marcas" class="barradebusqueda">
         <button class="boton-busqueda"><i class="fas fa-search"></i></button>
